--- a/Sweavetest/vignettes/Sweavetest.Rnw
+++ b/Sweavetest/vignettes/Sweavetest.Rnw
@@ -696,14 +696,18 @@ choice randomization that is done during the test creation process, so
 that firm counts can be given for each answer choice, not just counts
 of how many students chose ``A", ``B", ``C", etc.
 
-The output of this function is a matrix containing the number of respondents choosing each answer option. The rows correspond to question numbers, while the columns are representative of the answer options. The answer options are in the same order that the instructor provided them on the Sweave template.
+The output of this function is a matrix containing the number of
+respondents choosing each answer option. The rows correspond to
+question numbers, while the columns are representative of the answer
+options. The answer options are in the same order that the instructor
+provided them on the Sweave template.
 
 Below are the first five rows of the output matrix for our sample test:
 
 <<echo=true,results=verbatim>>=
 TestIndex <- read.csv(TestIndex.csv, head=TRUE)
 NumberOfVersions <- 4
-#CreateIndex(TestIndex, GradedTests)[1:5,]
+CreateIndex(TestIndex, GradedTests)[1:5,]
 @
 
 Any answer option which has very few respondents should be reviewed by
